--- a/package.json
+++ b/package.json
@@ -26,18 +26,30 @@
     "build:storybook": "build-storybook -o public/storybook"
   },
   "dependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/node": "^7.5.5",
+    "apollo-server": "^2.8.1",
+    "assets-webpack-plugin": "^3.9.10",
+    "convict": "^5.1.0",
+    "css-loader": "^3.2.0",
     "express": "^4.17.1",
+    "graphql": "^14.4.2",
+    "graphql-iso-date": "^3.6.1",
     "knex": "^0.19.1",
+    "mz": "^2.7.0",
     "objection": "^1.6.9",
     "pg": "^7.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "style-loader": "^1.0.0",
+    "url-loader": "^2.1.0",
+    "webpack": "^4.39.1",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/node": "^7.5.5",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.5.5",
@@ -55,6 +67,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "factory-girl": "^5.0.4",
     "jest": "^24.8.0",
     "nodemon": "^1.19.1",
     "prettier": "^1.18.2"
