--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "graphql": "^14.4.2",
     "graphql-iso-date": "^3.6.1",
     "knex": "^0.19.1",
+    "morgan": "^1.9.1",
     "mz": "^2.7.0",
     "objection": "^1.6.9",
     "pg": "^7.12.0",
