--- a/package.json
+++ b/package.json
@@ -26,13 +26,18 @@
     "build:storybook": "build-storybook -o public/storybook"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.0.0",
+    "@loadable/component": "^5.10.2",
+    "apollo-boost": "^0.4.3",
     "apollo-server": "^2.8.1",
     "assets-webpack-plugin": "^3.9.10",
+    "axios": "^0.19.0",
     "convict": "^5.1.0",
     "css-loader": "^3.2.0",
     "express": "^4.17.1",
     "graphql": "^14.4.2",
     "graphql-iso-date": "^3.6.1",
+    "graphql-tag": "^2.10.1",
     "knex": "^0.19.1",
     "morgan": "^1.9.1",
     "mz": "^2.7.0",
@@ -42,6 +47,7 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "style-loader": "^1.0.0",
+    "styled-components": "^4.3.2",
     "url-loader": "^2.1.0",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
