--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build:client": "rm -rf public/dist && NODE_ENV=production webpack",
     "build:server": "rm -rf lib/ && cp -R src/ lib/ && NODE_ENV=production babel -d lib src",
     "build": "yarn build:client && yarn build:server",
-    "heroku-postbuild": "yarn build",
+    "heroku-postbuild": "yarn build && yarn db:migrate",
     "lint": "eslint .",
     "test": "jest --runInBand",
     "start": "NODE_ENV=production node lib/server/app.js",
